website/websites/u32q/code/meteor.2.python3.log

Tue, 23 Dec 2008 00:36:14 GMT

MAKE:
mv meteor.python3-2.python3 meteor.python3-2.py
/usr/local/src/Python-3.0/python -OO -c "from py_compile import compile; compile('meteor.python3-2.py')"
  File "meteor.python3-2.py", line 35
    def floodFill(board, (x, y)):
                         ^
SyntaxError: invalid syntax

0.04s to complete and log all make actions

COMMAND LINE:
/usr/local/src/Python-3.0/python meteor.python3-2.pyo 2098

PROGRAM FAILED 


PROGRAM OUTPUT:

/usr/local/src/Python-3.0/python: can't open file 'meteor.python3-2.pyo': [Errno 2] No such file or directory
